# ai-eap-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  specs.txt
.github/workflows/: ci.yml
docs/: developer-guide.md  user-guide-aws-agentcore.md  user-guide-gcp-vertex.md
docs/integrations/: aws-bedrock-agentcore.md  gcp-vertex-agent-engine.md
docs/superpowers/plans/: 2026-05-10-eap-cli.md  2026-05-10-eap-core-eval.md  2026-05-10-eap-core-foundation.md  2026-05-10-eap-core-standards.md  2026-05-11-mcp-validation-bankdw-sfcrm.md  2026-05-11-security-sprint.md  2026-05-11-v0.5.1-patch.md  2026-05-11-v0.5.2-patch.md  2026-05-11-v0.6.0-cleanup.md  2026-05-11-v0.6.1-docs-refresh.md  2026-05-11-v0.6.2-patch.md  2026-05-11-v0.6.3-patch.md  2026-05-11-v0.7.0-cedar-and-coverage.md  2026-05-11-v1.1.0-mcp-client-adapter.md  2026-05-12-v1.2.0-mcp-http-transport.md  2026-05-12-v1.3.0-transport-completeness.md  2026-05-12-v1.4.0-quality-pass.md  2026-05-12-v1.5.0-cloud-live-tests.md  2026-05-12-v1.6.0-playground-webui.md  2026-05-12-v1.6.2-external-review.md  2026-05-12-v1.7.0-lifecycle-and-runtime-errors.md  2026-05-12-v1.8.0-tool-lifecycle-and-output-modes.md
docs/superpowers/specs/: 2026-05-10-eap-core-design.md
examples/: README.md
examples/agentcore-bank-agent/: README.md  agent.py  cloud_wiring.py  pyproject.toml
examples/agentcore-bank-agent/configs/: agent_card.json
examples/agentcore-bank-agent/tests/: golden_set.json
examples/agentcore-bank-agent/tools/: __init__.py  lookup_account.py  transfer_funds.py
examples/bankdw-mcp-server/: README.md  duck.py  pyproject.toml  schema.py  server.py
examples/bankdw-mcp-server/tests/: test_query_safety.py  test_tools.py
examples/bankdw-mcp-server/tests_bankdw/: test_tools.py
examples/bankdw-mcp-server/tools/: __init__.py  describe_table.py  list_tables.py  query_sql.py
examples/cross-domain-agent/: README.md  agent.py  mcp_client_adapter.py  pyproject.toml
examples/cross-domain-agent/tests/: test_adapter.py  test_agent.py
examples/cross-domain-agent/tests_cross_domain/: test_adapter.py  test_agent.py
examples/mcp-server-example/: .claude.md  README.md  pyproject.toml  server.py
examples/mcp-server-example/configs/: agent_card.json
examples/mcp-server-example/tools/: example_tool.py
examples/playground/: README.md  pyproject.toml  server.py  tracing.py
examples/playground/static/: app.js  index.html  style.css
examples/playground/tests_playground/: test_api.py
examples/research-agent/: .claude.md  .gitignore  README.md  agent.py  pyproject.toml
examples/research-agent/configs/: agent_card.json  policy.json
examples/research-agent/tools/: __init__.py  example_tool.py  search_docs.py
examples/sfcrm-mcp-server/: README.md  pyproject.toml  schema.py  server.py
examples/sfcrm-mcp-server/tests/: test_query_safety.py  test_tools.py
examples/sfcrm-mcp-server/tests_sfcrm/: test_query_safety.py
examples/sfcrm-mcp-server/tools/: __init__.py  describe_table.py  list_tables.py  query_sql.py
examples/transactional-agent/: .claude.md  README.md  agent.py  pyproject.toml  responses.yaml
examples/transactional-agent/configs/: agent_card.json
examples/transactional-agent/tests/: golden_set.json
examples/transactional-agent/tools/: example_tool.py  get_account.py  transfer_funds.py
examples/vertex-bank-agent/: README.md  agent.py  cloud_wiring.py  pyproject.toml  responses.yaml
examples/vertex-bank-agent/configs/: policy.json
examples/vertex-bank-agent/tools/: lookup_account.py  transfer_funds.py
