[project]
name = "ai-eap-sdk-workspace"
version = "0.0.0"
description = "Workspace root for the EAP-Core SDK"
requires-python = ">=3.11"

# Forward each member's extras via the workspace root so callers can run
# `uv sync --extra <name>` from the repo root and have it activate the
# corresponding extra on the eap-core package.
[project.optional-dependencies]
pii = ["eap-core[pii]"]
otel = ["eap-core[otel]"]
aws = ["eap-core[aws]"]
gcp = ["eap-core[gcp]"]
mcp = ["eap-core[mcp]"]
a2a = ["eap-core[a2a]"]
eval = ["eap-core[eval]"]
policy-cedar = ["eap-core[policy-cedar]"]
all = [
    "eap-core[pii,otel,aws,gcp,mcp,a2a,eval,policy-cedar]",
]

# Dev tooling lives in a PEP 735 dependency group at the workspace root —
# the idiomatic location in a uv workspace. Activate with `uv sync --group dev`.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv.workspace]
members = ["packages/eap-core", "packages/eap-cli"]

[tool.uv.sources]
eap-core = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages/eap-core/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC", "RUF"]
ignore = [
    "S101",     # assert allowed (especially in tests)
    "ASYNC240", # pathlib in async fns is fine for our scaffolder workloads
    "S701",     # jinja2 autoescape=False is intentional — we render Python source, not HTML
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S",     # bandit (test code can hardcode secrets, run subprocesses, etc.)
    "B",     # bugbear (test fixtures often use mutable defaults)
    "E501",  # long lines OK in tests
    "E402",  # tests/extras/ uses `pytest.importorskip` then late-imports — standard pytest pattern
]
"packages/eap-core/src/eap_core/__init__.py" = [
    "E402",  # NullHandler must be attached before subpackage imports run
]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["packages/eap-core/src", "packages/eap-cli/src"]

# Third-party libraries that don't ship `py.typed` markers or whose type
# stubs aren't available — silence mypy's import-untyped errors at import
# time. We still type-check our own code that uses them; we just don't
# expect mypy to know their internals.
[[tool.mypy.overrides]]
module = [
    "boto3",
    "boto3.*",
    "botocore.*",
    "vertexai",
    "vertexai.*",
    "google",
    "google.*",
    "presidio_analyzer",
    "presidio_analyzer.*",
    "presidio_anonymizer",
    "presidio_anonymizer.*",
    "cedarpy",
    "ragas",
    "ragas.*",
    "jsonschema",
    "jsonschema.*",
    "mcp",
    "mcp.*",
    "yaml",
    "fastapi",
    "fastapi.*",
    "opentelemetry",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/eap-core/tests", "packages/eap-cli/tests"]
addopts = "--strict-markers -ra"
markers = [
    "cloud: tests that hit real cloud APIs (skipped without EAP_ENABLE_REAL_RUNTIMES=1)",
    "extras: tests that require optional extras",
]
filterwarnings = [
    "error::RuntimeWarning",
    "error::DeprecationWarning",
]

[tool.coverage.run]
source = ["packages/eap-core/src", "packages/eap-cli/src"]
branch = true
# Modules whose code paths only run with optional extras installed are
# omitted from default coverage. They're exercised via `tests/extras/*`
# which run in the CI matrix per-extra.
omit = [
    "packages/eap-core/src/eap_core/runtimes/bedrock.py",
    "packages/eap-core/src/eap_core/runtimes/vertex.py",
    "packages/eap-core/src/eap_core/a2a/server.py",
    "packages/eap-core/src/eap_core/mcp/server.py",
    "packages/eap-core/src/eap_core/eval/ragas_adapter.py",
]

[tool.coverage.report]
fail_under = 90
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
