[project]
name = "bankdw-mcp-server"
version = "0.1.0"
description = "EAP-Core validation example: payments data warehouse exposed as an MCP server backed by in-memory DuckDB."
requires-python = ">=3.11"
dependencies = [
    "eap-core>=0.7",
    "mcp>=0.9",
    "duckdb>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "duck.py", "schema.py", "tools/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
