[project]
name = "cross-domain-agent"
version = "0.1.0"
description = "EAP-Core validation: agent that consumes bankdw + sfcrm MCP servers as remote tools."
requires-python = ">=3.11"
dependencies = [
    "eap-core>=0.7",
    "mcp>=0.9",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["agent.py", "mcp_client_adapter.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
