[project]
name = "eap-playground"
version = "0.1.0"
description = "EAP-Core SDK playground — browser-based UI for testing example agents"
requires-python = ">=3.11"
dependencies = [
    "eap-core",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
