[project]
name = "eap-playground"
version = "0.1.0"
description = "EAP-Core SDK playground — browser-based UI for testing example agents"
requires-python = ">=3.11"
dependencies = [
    "eap-core>=1.6.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Resolve ``eap-core`` against the in-tree workspace member rather
# than PyPI. Without this, ``cd examples/playground && uv sync`` would
# pull whatever ``eap-core`` happens to be on PyPI; with it, the
# playground always tests against the source tree it ships with.
[tool.uv.sources]
eap-core = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
