[project]
name = "vertex-bank-agent"
version = "0.1.0"
description = "Reference EAP-Core bank agent on GCP Vertex Agent Engine"
requires-python = ">=3.11"
dependencies = [
    "eap-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
